# home_server

./: .gitignore
ansible/configs/dns/: db.168.192  db.mynet  db.mynet.local  named.conf
ansible/inventory/: hosts
ansible/playbooks/: apt-install.yml  dns.yml  ssh.yml  user.yml
cert-manager/: ca.yaml
metallb/: metallb-config.yaml
minio/: tenant-base.yaml
nfs-csi/: storageclass.yaml
nfs-subdir-external-provisioner/: values.yaml
postgresql/: ingress.yaml
prefect/: ingress.yaml
prefect/workflow/: dqx_get_itemname.py  my_flow.py  pyproject.toml  repo_info.py
prefect/workflow/dqx/: Dockerfile  get_market_price.py  prefect.yaml  pyproject.toml
prefect/workflow/dqx/common/: load_psql.py  login_dqx.py  save_psql.py
prefect/workflow/dqx/get_item_hash_hiroba/: get_item_hash.py
prefect/workflow/dqx/get_itemname/: get_itemname.py  pyproject.toml
prefect/workflow/dqx/get_itemname_hiroba/: get_itemname.py
prefect/workflow/dqx/get_price/: get_price.py
prefect/workflow/dqx/get_trade_history/: get_trade_history.py
prefect/workflow/dqx/sh/: depoyment_run.sh
redash/: ingress.yaml
traefik/: service.yaml
