[tool.poetry]
name = "dqx"
version = "0.1.1"
description = ""
authors = ["tig0826 <tigcr0826@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
bs4 = "^0.0.1"
mechanize = "^0.4.8"
selenium = "^4.4.3"
config = "^0.5.1"
openpyxl = "^3.0.10"
chromedriver-binary = "^105.0.5195"
#chromedriver-binary-auto = "^0.2.0"
psycopg2 = "^2.9.8"
sqlalchemy = "^2.0.21"
prefect = "2.14.3"
prefect-github = "^0.2.0"
pandas = "^2.1.2"
ipython = "8.16.1"
docker = "^6.1.3"
prefect-docker = "^0.4.0"
numpy = "^1.26.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
