[tool.poetry]
name = "dqx"
version = "0.1.0"
description = ""
authors = ["tig0826 <tigcr0826@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
pandas = "^1.4.3"
bs4 = "^0.0.1"
mechanize = "^0.4.8"
selenium = "^4.4.3"
config = "^0.5.1"
openpyxl = "^3.0.10"
chromedriver-binary = "^105.0.5195"
#chromedriver-binary-auto = "^0.2.0"
psycopg2 = "^2.9.8"
sqlalchemy = "^2.0.21"
prefect = "^2.13.4"
prefect-github = "^0.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
